--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,15 @@ services:
 
   db:
     image: postgres
-    restart: always
     environment:
-      POSTGRES_PASSWORD: example
+      POSTGRES_USER: john
+      POSTGRES_PASSWORD: mysecretpassword
+    expose:
+      - 5432
 
   myapp:
     build: .
+    image: myapp
     command: yarn start
     expose:
       - 8000
@@ -17,7 +20,8 @@ services:
       - db
 
   myapp-tests:
-    build: .
-    command: yarn test
+    image: myapp
+    command: dockerize -wait tcp://db:5432 -wait tcp://myapp:8000 -timeout 10s bash -c "node db/init.js && yarn test"
     depends_on:
+      - db
       - myapp
